# chatbot-rag-gunadarma-backend

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.sh  setup.py
app/: __init__.py
app/api/: __init__.py  app.py  config.py  dependencies.py  exceptions.py  middleware.py  models.py  services.py  utils.py  validators.py  websocket.py
app/api/routes/: __init__.py  cache.py  health.py  question.py  root.py  websocket.py
app/crawl/: __init__.py  cache_manager.py  config.py  content_manager.py  crawler.py  models.py  robots_checker.py  url_filter.py
app/rag/: __init__.py  async_processor.py  data_cleaner.py  hybrid_search.py  pipeline.py  semantic_cache.py  vector_store.py
crawl/: crawler.py
rag/: async_processor.py  data_cleaner.py  data_processor.py  db_setup.py  pipeline.py  vector_store.py
scripts/: __init__.py  run.py  setup.py
scripts/src/: __init__.py
scripts/src/cli/: __init__.py  app.py  commands.py
scripts/src/setup/: __init__.py  db_setup.py  orchestrator.py  vector_store.py
scripts/src/setup/core/: __init__.py  config.py  enums.py  logger.py  tracker.py
scripts/src/setup/managers/: __init__.py  cache_manager.py  data_crawler.py  data_processor.py  system_tester.py
scripts/src/setup/ui/: __init__.py  console.py  display.py
scripts/src/setup/validators/: __init__.py  environment.py
test/: test_api.py  test_crawler.py  test_setup.py  test_system.py
tests/: test_api.py  test_crawler.py  test_hybrid_search.py  test_performance.py  test_setup.py  test_system.py
