[project]
name = "penelitian-ilmiah"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "chainlit>=2.5.5",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.32.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-google-genai>=2.0.10",
    "langchain-postgres>=0.0.13",
    "lxml>=5.4.0",
    "nest-asyncio>=1.6.0",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "pgvector>=0.3.6",
    "pipreqs>=0.5.0",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.18",
    "requests>=2.32.3",
    "ruff>=0.11.12",
    "schedule>=1.2.2",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "undetected-chromedriver>=3.5.5",
    "urllib3>=2.4.0",
    "uvicorn[standard]>=0.34.3",
]
